--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "twbs-pagination",
     "nativeName": "jQuery Bootstrap Pagination",
-    "version": "1.3",
+    "version": "0.0.2",
     "homepage": "https://github.com/esimakin/twbs-pagination",
     "author": "Eugene Simakin <eugenesimakin@mail.ru>",
     "description": "jQuery simple pagination plugin for bootstrap-style webpages",
@@ -14,7 +14,29 @@
         "grunt-cli": "~0.1.13",
         "grunt-contrib-watch": "~0.6.1",
         "grunt-contrib-uglify": "^0.9.2",
-        "load-grunt-tasks": "^3.1.0"
+        "load-grunt-tasks": "^3.1.0",
+        "babel-cli": "^6.6.5",
+        "babel-preset-es2015": "^6.6.0",
+        "del": "^2.2.0",
+        "gulp": "^3.9.1",
+        "gulp-autoprefixer": "^3.1.0",
+        "gulp-babel": "^6.1.2",
+        "gulp-concat": "^2.6.0",
+        "gulp-csso": "^1.0.1",
+        "gulp-filter": "^3.0.1",
+        "gulp-flatten": "^0.2.0",
+        "gulp-htmlmin": "^1.3.0",
+        "gulp-if": "^2.0.0",
+        "gulp-less": "^3.0.5",
+        "gulp-load-plugins": "^1.2.0",
+        "gulp-rename": "^1.2.2",
+        "gulp-rev": "^7.0.0",
+        "gulp-rev-replace": "^0.4.3",
+        "gulp-ruby-sass": "^2.0.6",
+        "gulp-sass": "^2.2.0",
+        "gulp-sourcemaps": "^1.6.0",
+        "gulp-uglify": "^1.5.2",
+        "gulp-util": "^3.0.7"
     },
     "repository": {
         "type": "git",
